positioned plant images

--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
     <body>
       <section id="header">
         <canvas id="canvas"></canvas>
-        <!-- <div class="bg" id="img-top"></div> -->
-        <!-- <div class="bg" id="img-bottom"></div> -->
         <img src="assets/m-squiggle-top.png" alt="img" class="bg" id="img-top">
         <img src="assets/m-squiggle-bottom.png" alt="img" class="bg" id="img-bottom">
+        <img src="assets/spider.png" alt="spider" class="plant" id="spider">
+        <img src="assets/ficus.png" alt="ficus" class="plant" id="ficus">
+        <img src="assets/big-leaf.png" alt="big" class="plant" id="big-leaf">
+        <img src="assets/blue.png" alt="blue" class="plant" id="blue1">
+        <img src="assets/blue.png" alt="blue" class="plant" id="blue2">
+        <img src="assets/snake.png" alt="snake" class="plant" id="snake">
+        <img src="assets/veeg.png" alt="veeg" class="plant" id="veeg">
       </section>
       <section id="work">
         <div id="workcontent">
@@ -41,7 +46,8 @@
           <p>I’m Laurie Waxman, a creative technologist, experience designer, and graphic artist with a BFA in Design and Technology from Parsons the New School for Design. I hail from the <a href="https://goo.gl/maps/m5esj4rEa3q">true north, strong and free</a>, and currently reside in Brooklyn, NY.</p>
           <p>Since graduating at the top of my class, I've been working as a designer at <a href="http://midnightcommercial.com/">Midnight Commercial</a>.</p> 
           <p>I read science fiction, have a personal interest in activism, drink my coffee black, and I’m looking to put my skills to good use helping clients stand out in unusual and innovative ways.</p>
-          <p>Reach me at laurie.waxman@gmail.com</p>
+          <p>Reach me at <a href="mailto:laurie.waxman@gmail.com">laurie.waxman@gmail.com</a>.</p>
+
         </div>
         <img src="assets/green.png" alt="green">
       </section>
