--- a/index.html
+++ b/index.html
@@ -21,30 +21,29 @@
       </section>
       <section id="work">
         <div id="workcontent">
-          <img class="col-1" src="http://fillmurray.com/250/250" alt="">
-          <img class="col-2" src="http://fillmurray.com/250/250" alt="">
-          <img class="col-2" src="http://fillmurray.com/250/250" alt="">
-          <img class="col-1" src="http://fillmurray.com/250/250" alt="">
-          <img class="col-1" src="http://fillmurray.com/250/250" alt="">
-          <img class="col-1" src="http://fillmurray.com/250/250" alt="">
-          <img class="col-1" src="http://fillmurray.com/250/250" alt="">
-          <img class="col-1" src="http://fillmurray.com/250/250" alt="">
-          <img class="col-1" src="http://fillmurray.com/250/250" alt="">
-          <img class="col-1" src="http://fillmurray.com/250/250" alt="">
-          <img class="col-1" src="http://fillmurray.com/250/250" alt="">
-          <img class="col-1" src="http://fillmurray.com/250/250" alt="">
-          <img class="col-1" src="http://fillmurray.com/250/250" alt="">
-          <img class="col-1" src="http://fillmurray.com/250/250" alt="">
-          <img class="col-1" src="http://fillmurray.com/250/250" alt="">
-          <img class="col-1" src="http://fillmurray.com/250/250" alt="">
-          <img class="col-1" src="http://fillmurray.com/250/250" alt="">
-          <img class="col-1" src="http://fillmurray.com/250/250" alt="">
+          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/project.html"><img class="col-2" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/project.html"><img class="col-2" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
         </div>
       </section>
       <section id="about">
         <div id="aboutcontent">
-          <p>I’m Laurie Waxman, a creative technologist, experience designer, and graphic artist with a BFA in Design and Technology from Parsons the New School for Design. I hail from the <a href="https://goo.gl/maps/m5esj4rEa3q">true north, strong and free</a>, and currently reside in Brooklyn, NY.</p>
-          <p>Since graduating at the top of my class, I've been working as a designer at <a href="http://midnightcommercial.com/">Midnight Commercial</a>.</p> 
+          <p>I’m Laurie Waxman, a creative technologist, experience designer, and graphic artist with a BFA in Design and Technology from Parsons the New School for Design. I hail from the <a href="https://goo.gl/maps/m5esj4rEa3q">true north, strong and free</a>, and currently reside in Brooklyn, NY. Since graduating at the top of my class, I've been working as a designer at <a href="http://midnightcommercial.com/">Midnight Commercial</a>.</p> 
           <p>I read science fiction, have a personal interest in activism, drink my coffee black, and I’m looking to put my skills to good use helping clients stand out in unusual and innovative ways.</p>
           <p>Reach me at <a href="mailto:laurie.waxman@gmail.com">laurie.waxman@gmail.com</a>.</p>
 
