--- a/index.html
+++ b/index.html
@@ -21,24 +21,23 @@
       </section>
       <section id="work">
         <div id="workcontent">
-          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
-          <a href="work/project.html"><img class="col-2" src="http://fillmurray.com/250/250" alt=""></a>
-          <a href="work/project.html"><img class="col-2" src="http://fillmurray.com/250/250" alt=""></a>
-          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
-          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
-          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
-          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
-          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
-          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
-          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
-          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
-          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
-          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
-          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
-          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
-          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
-          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
-          <a href="work/project.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/01_alphabet.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/02_bindthisbook.html"><img class="col-2" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/03_flandill.html"><img class="col-2" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/04_airquality.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/05_bfadt.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="https://chrome.google.com/webstore/detail/automatab-%E2%80%94-a-new-tab-pag/lmhppbimjgjafkdhkpmgolplbgmliedl?hl=en"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/07_garden.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/08_meindlfigurines.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/09_ardent.html"><img class="col-2" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/10_sol-3.html"><img class="col-2" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/11_pattern.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/12_tealights.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/13_cityscape.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="http://lauriewaxman.com/work/scribbler/"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/15_coasttocoast.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/16_calendar.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
+          <a href="work/17_misc.html"><img class="col-1" src="http://fillmurray.com/250/250" alt=""></a>
         </div>
       </section>
       <section id="about">
