fixed work grid

--- a/index.html
+++ b/index.html
@@ -21,23 +21,108 @@
       </section>
       <section id="work">
         <div id="workcontent">
-          <a href="work/01_alphabet.html"><img class="col-1" src="assets/thumbnails/flandill-2.png" alt=""></a>
-          <a href="work/02_bindthisbook.html"><img class="col-2" src="assets/thumbnails/flandill-2.png" alt=""></a>
-          <a href="work/03_flandill.html"><img class="col-2" src="assets/thumbnails/flandill-2.png" alt=""></a>
-          <a href="work/04_airquality.html"><img class="col-1" src="assets/thumbnails/flandill-2.png" alt=""></a>
-          <a href="work/05_bfadt.html"><img class="col-1" src="assets/thumbnails/flandill-2.png" alt=""></a>
-          <a href="https://chrome.google.com/webstore/detail/automatab-%E2%80%94-a-new-tab-pag/lmhppbimjgjafkdhkpmgolplbgmliedl?hl=en"><img class="col-1" src="assets/thumbnails/flandill-2.png" alt=""></a>
-          <a href="work/07_garden.html"><img class="col-1" src="assets/thumbnails/flandill-2.png" alt=""></a>
-          <a href="work/08_meindlfigurines.html"><img class="col-1" src="assets/thumbnails/flandill-2.png" alt=""></a>
-          <a href="work/09_ardent.html"><img class="col-2" src="assets/thumbnails/flandill-2.png" alt=""></a>
-          <a href="work/10_sol-3.html"><img class="col-2" src="assets/thumbnails/flandill-2.png" alt=""></a>
-          <a href="work/11_pattern.html"><img class="col-1" src="assets/thumbnails/flandill-2.png" alt=""></a>
-          <a href="work/12_tealights.html"><img class="col-1" src="assets/thumbnails/flandill-2.png" alt=""></a>
-          <a href="work/13_cityscape.html"><img class="col-1" src="assets/thumbnails/flandill-2.png" alt=""></a>
-          <a href="http://lauriewaxman.com/work/scribbler/"><img class="col-1" src="assets/thumbnails/flandill-2.png" alt=""></a>
-          <a href="work/15_coasttocoast.html"><img class="col-1" src="assets/thumbnails/flandill-2.png" alt=""></a>
-          <a href="work/16_calendar.html"><img class="col-1" src="assets/thumbnails/flandill-2.png" alt=""></a>
-          <a href="work/17_misc.html"><img class="col-1" src="assets/thumbnails/flandill-2.png" alt=""></a>
+          <a href="work/01_alphabet.html">
+            <img class="col-1" src="assets/thumbnails/flandill-2.png" alt="">
+            <div class="overlay">
+              <h2>alphabet iterations</h2>
+            </div>
+          </a>
+          <a href="work/02_bindthisbook.html">
+            <img class="col-2" src="assets/thumbnails/flandill-2.png" alt="">
+            <div class="overlay">
+              <h2>bind this book</h2>
+            </div>
+          </a>
+          <a href="work/03_flandill.html">
+            <img class="col-2" src="assets/thumbnails/flandill-2.png" alt="">
+            <div class="overlay">
+              <h2>flandill</h2>
+            </div>
+          </a>
+          <a href="work/04_airquality.html">
+            <img class="col-1" src="assets/thumbnails/flandill-2.png" alt="">
+            <div class="overlay">
+              <h2>air quality</h2>
+            </div>
+          </a>
+          <a href="work/05_bfadt.html">
+            <img class="col-1" src="assets/thumbnails/flandill-2.png" alt="">
+            <div class="overlay">
+              <h2>bfadt</h2>
+            </div>
+          </a>
+          <a href="https://chrome.google.com/webstore/detail/automatab-%E2%80%94-a-new-tab-pag/lmhppbimjgjafkdhkpmgolplbgmliedl?hl=en">
+            <img class="col-1" src="assets/thumbnails/flandill-2.png" alt="">
+            <div class="overlay">
+              <h2>automatab</h2>
+            </div>
+          </a>
+          <a href="work/07_garden.html">
+            <img class="col-1" src="assets/thumbnails/flandill-2.png" alt="">
+            <div class="overlay">
+              <h2>garden</h2>
+            </div>
+          </a>
+          <a href="work/08_meindlfigurines.html">
+            <img class="col-1" src="assets/thumbnails/flandill-2.png" alt="">
+            <div class="overlay">
+              <h2>meindl figurines</h2>
+            </div>
+          </a>
+          <a href="work/09_ardent.html">
+            <img class="col-2" src="assets/thumbnails/flandill-2.png" alt="">
+            <div class="overlay">
+              <h2>ardent</h2>
+            </div>
+          </a>
+          <a href="work/10_sol-3.html">
+            <img class="col-2" src="assets/thumbnails/flandill-2.png" alt="">
+            <div class="overlay">
+              <h2>sol-3</h2>
+            </div>
+          </a>
+          <a href="work/11_pattern.html">
+            <img class="col-1" src="assets/thumbnails/flandill-2.png" alt="">
+            <div class="overlay">
+              <h2>pattern</h2>
+            </div>
+          </a>
+          <a href="work/12_tealights.html">
+            <img class="col-1" src="assets/thumbnails/flandill-2.png" alt="">
+            <div class="overlay">
+              <h2>tealights</h2>
+            </div>
+          </a>
+          <a href="work/13_cityscape.html">
+            <img class="col-1" src="assets/thumbnails/flandill-2.png" alt="">
+            <div class="overlay">
+              <h2>cityscape</h2>
+            </div>
+          </a>
+          <a href="http://lauriewaxman.com/work/scribbler/">
+            <img class="col-1" src="assets/thumbnails/flandill-2.png" alt="">
+            <div class="overlay">
+              <h2>scribbler</h2>
+            </div>
+          </a>
+          <a href="work/15_coasttocoast.html">
+            <img class="col-1" src="assets/thumbnails/flandill-2.png" alt="">
+            <div class="overlay">
+              <h2>coast to coast</h2>
+            </div>
+          </a>
+          <a href="work/16_calendar.html">
+            <img class="col-1" src="assets/thumbnails/flandill-2.png" alt="">
+            <div class="overlay">
+              <h2>calendar</h2>
+            </div>
+          </a>
+          <a href="work/17_misc.html">
+            <img class="col-1" src="assets/thumbnails/flandill-2.png" alt="">
+            <div class="overlay">
+              <h2>misc.</h2>
+            </div>
+          </a>
         </div>
       </section>
       <section id="about">
