started to add illustrations

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       <section id="work">
         <div id="workcontent">
           <a href="work/01_alphabet.html">
-            <img class="col-1" src="assets/thumbnails/flandill-2.png" alt="">
+            <img class="col-1" src="assets/thumbnails/alphabet.png" alt="">
             <div class="overlay">
               <h2>alphabet iterations</h2>
             </div>
           </a>
           <a href="work/02_bindthisbook.html">
-            <img class="col-2" src="assets/thumbnails/flandill-2.png" alt="">
+            <img class="col-2" src="assets/thumbnails/bindthisbook.png" alt="">
             <div class="overlay">
               <h2>bind this book</h2>
             </div>
@@ -40,13 +40,13 @@
             </div>
           </a>
           <a href="work/04_airquality.html">
-            <img class="col-1" src="assets/thumbnails/flandill-2.png" alt="">
+            <img class="col-1" src="assets/thumbnails/airquality.png" alt="">
             <div class="overlay">
               <h2>air quality</h2>
             </div>
           </a>
           <a href="work/05_bfadt.html">
-            <img class="col-1" src="assets/thumbnails/flandill-2.png" alt="">
+            <img class="col-1" src="assets/thumbnails/bfadt.png" alt="">
             <div class="overlay">
               <h2>bfadt</h2>
             </div>
