working on new writing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
 		<section id="header">
-      		<h2 class="introHeader">I’m Laurie, a multidisciplinary designer & technologist based in Brooklyn. I’ve worked on interactive installations, websites, and I’m currently looking for a full-time position!</h2>
+			<h2 class="introHeader">Hi, I&rsquo;m Laurie, a designer, technologist and graphic artist based in Brooklyn. I&rsquo;m currently looking for a full-time position, <a href="mailto:hello@lauriewaxman.com">reach out!</a></h2>
 		</section>
 		<section id="work">
       		<div id="selectedWork">
