--- a/work/newnewyork.html
+++ b/work/newnewyork.html
@@ -15,11 +15,13 @@
 				<h2 class="selectedHeader">Representing life in Brooklyn with a 3D-printed souvenir.</h2>
 				<h3 class="skills">3d modeling, rendering</h3>
 			</div>
-			<p>For their fall 2017 exhibition, Storefront for Art and Architecture asked a selection of New York City design studios to each make a model representating a given Community Board. <a href="">Midnight Commercial</a> was tasked with Brooklyn Community Board 2, an area encompassing Fort Greene, Clinton Hill, Brooklyn Heights, and the Brooklyn Navy Yard amongst others.</p>
+			<p class="intro">For their fall 2017 exhibition, Storefront for Art and Architecture asked a selection of New York City design studios to each make a model representating a zone of the city. Midnight Commercial was tasked with Brooklyn Community Board 2, an area encompassing Fort Greene, Clinton Hill, Brooklyn Heights, and the Brooklyn Navy Yard amongst others.</p>
+            <div class="img-group">
+                <img class="big" src="../images/newnewyork_poster.jpg">
+            </div>
             <p>To represent the every day life in these neighbourhoods, we put together an assembly kit of items including the two iconic bridges, Pratt, MTA train cars, bagels, delivery guys, a park inspired by Fowler Square, and&mdash;my personal but painful favourite&mdash;a bike with stolen parts.</p>
             <p>For additional information, images, and press, visit <a href="http://midnightcommercial.com/project/souvenirs/" target="_blank">Midnight Commercial's page</a>.</p>
             <div class="img-group">
-                <img class="big" src="../images/newnewyork_poster.jpg">
                 <img class="small" src="../images/newnewyork_e.png"><img class="small" src="../images/newnewyork_n.png">
                 <img class="small" src="../images/newnewyork_w.png"><img class="small" src="../images/newnewyork_s.png">
                 <img class="big" src="../images/newnewyork_d2.png">
