--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!doctype html>
+4<!doctype html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -6,17 +6,18 @@
         <meta name="p:domain_verify" content="8f195cfa8cf6bf0cac261f4818d4c602"/>
         <title>Laurie Waxman</title>
         <link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     </head>
     <body>
 		<section id="about">
-		    <img id="self" class="right" src="images/180410-self.png">
-			<div id="hello" class="left">
-				<h3 class="title">Hey there!</h3>
-				<h2 class="selectedHeader">I’m Laurie, a Canadian designer & technologist based in Brooklyn, currently looking for a full-time position.<h2>
-				<p>I have a BFA in Design & Technology from Parsons New School for Design and two years experience working on interative installations, websites, and graphic design.</p>
-				<p>I read science fiction, have a personal interest in activism, drink my coffee black, and I’m looking to put my skills to good use helping clients stand out in unusual and innovative ways.</p>
-	        	<p>Reach me at <a href="mailto:hello@lauriewaxman.com">hello@lauriewaxman.com</a>, check out my <a href="redsume.pdf">resume</a>, or just see what I’ve been working on lately on my <a href="http://blog.lauriewaxman.com">Tumblr</a>.</p>
+		    <img id="self" src="images/180410-self.png">
+			<div id="hello">
+				<h3 class="title">Hi, I’m Laurie Waxman.</h3>
+				<h2 class="selectedHeader">I’m a Canadian designer, technologist and graphic artist based in Brooklyn. My experience covers graphic design, experience design, creative coding, illustration, front-end development—and you’re in luck! I’m currently looking for a full-time position.</h2>
+				<p><i class="fa fa-envelope-square"></i>&nbsp;&nbsp;<a href="mailto:hello@lauriewaxman.com">hello@lauriewaxman.com</a>
+				</br><i class="fa fa-tumblr-square"></i>&nbsp;&nbsp;<a href="http://blog.lauriewaxman.com">things I’m working on</a>
+				</br><i class="fa fa-file"></i>&nbsp;&nbsp;<a href="resume.pdf">my resume</a></p>
 			</div>
 		</section>
 		<section id="footer">
