--- a/work/flandill.html
+++ b/work/flandill.html
@@ -15,12 +15,12 @@
 				<h2 class="selectedHeader">The home of a digital-ecosystem.</h2>
 				<h3 class="skills">creative coding, illustration, web</h3>
 			</div>
-			 <p>Once a beautiful and peaceful place, humans have since discovered the planet, depleting its resources and polluting its air. The creatures that live there, &ldquo;deebs,&rdquo; are an endangered species. If during your visit to the site you kill one of these deebs, that deeb is dead, forever&mdash;R.I.P. Phil. All of our actions have effects, however insignificant they may seem, so just by visiting Flandill&mdash;whether or not you pick the flowers or scare the deebs&mdash;you add pollutants to Flandill's ecosystem. As these pollutants add up, the health of the planet deteriorates, visibly. If the <a href="p://www.theguardian.com/environment/planet-oz/2016/may/20/carbon-dioxides-400ppm-milestone-shows-humans-are-re-writing-the-planets-history">atmospheric pollution breaches 400ppm</a>, Flandill will be forever transformed, and the deebs face extinction. Every day the planet goes without a visit, its air clears slightly.</p>
+			<p>Flandill is a website/art piece  </p>
+
                 <div class="img-group">
                     <video class="big" controls="controls" autoplay="true" loop="true" name="Flandill Good Health" src="../images/deebs_happy.mov"></video>
                 </div>
-                <p>Somewhat ironically, by visiting the site, there are real environmental effects on Earth. The web, in my opinion, is one of the least talked about environmental concerns of our age. It takes ridiculous amounts of energy to power, and it's getting exponentially bigger every year. To counteract this real life consqeuence, Flandill (and my personal site that you're currently on) are served by a <a href="https://asmallorange.com/">sustainable web host</a>. The data stored to generate Flandill also overwrites itself on each visit, rather than creating a new file, in order to manage server storage, and it isn't dependant on any Javascript libraries.</p> 
-                <p>Data is read and stored to the server through XML HTTP requests, as JSON. To create the animation, I wrote a small JS library that runs in a canvas, similiar to P5, with only the functions I required, in the felt-tip marker aesthetic I desired; all curves and lines jitter slightly to emulate frame-by-frame hand drawn animation.</p>
+
                 <div class="img-group">
                     <img class="big" src="../images/flandill_ok.jpg">
                     <img class="big" src="../images/flandill_dead.jpg">
