--- a/work/gentex.html
+++ b/work/gentex.html
@@ -11,17 +11,20 @@
     <body>
 		<section id="fullProject">
 			<div class="header">
-				<h3 class="title">Gentex Vehicle Simulator w/ Midnight Commercial</h3>
-				<h2 class="selectedHeader">Showing off Gentex technologies in a user-friendly set-up.</h2>
+				<h3 class="title">Gentex Vehicle Simulator</h3>
+				<h2 class="selectedHeader">Showing off Gentex technologies in an immersive experience.</h2>
 				<h3 class="skills">user experience, visual design</h3>
 			</div>
-			<p class="right">While I was at <a href="http://midnightcommercial.com/">Midnight Commercial</a>, we worked with <a href="http://www.gentex.com/">Gentex</a> to help bring their new Vehicle Simulator to life. We designed user scenarios to demonstrate all the technologies they had integrated, and a visual interface for the rear view mirror and heads-up-display that would show users the status of said technlogies. This included an iris-scan personalization scenario that would do things like adjust the seat and mirrors, a home arrival scenario that would open garage doors and turn on lights as the driver approached home, and a toll booth scenario that would automatically pay tolls.</p>
+			<p>The Gentex Vehicle Simulator is an immersive showcase of all the company&rsquo;s automotive technologies. They came to Midnight Commercial to design the user experience, which allows Gentex representatives to show customers how their products work in a variety of scenarios.</p>
+			<p>I worked on the UX and UI of the experience&rsquo;s visual interface—the Full Display Mirror (or &ldquo;FDM,&rdquo; a rear view mirror that supports full screen video) and Heads Up Display (or &ldquo;HUD,&rdquo; a transparent glass display used as the Vehicle Simulator&rsquo;s main console).</p>
 			<div class="img-group">
-                <video class="big lazy" controls="controls" autoplay="true" muted="true" loop="true" name="Gentex Detail" src="../images/180504_Gentex-01.mp4"></video>
-                <video class="big lazy" controls="controls" autoplay="true" muted="true" loop="true" name="Gentex Detail" src="../images/180504_Gentex-02.mp4"></video>
-                <video class="big lazy" controls="controls" autoplay="true" muted="true" loop="true" name="Gentex Detail" src="../images/180504_Gentex-03.mp4"></video>
-                <img class="big lazy" src="../images/180504_Gentex-05.png">
-            </div>
+                <img class="big" src="../images/180517-Gentex-Diagram.png">
+				<img class="big" src="../images/180517-Gentex-Scenarios.png" alt="">
+				<img class="big" src="../images/180517-Gentex-Wireframe.png" alt="">
+				<img class="big" src="../images/180517-Gentex-Visuals.png" alt="">
+				<img class="big" src="../images/180517-Gentex-Designs.png" alt="">
+                <video class="big" controls="controls" autoplay="true" muted="true" loop="true" name="Gentex Detail" src="../images/180504_Gentex-B.mp4"></video>
+			</div>
 		</section>
 		<section id="nextProject">
 			<div class="header">
